third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/emit.stderr
error: emit!(span, from) test
 --> tests/ui/emit.rs:3:7
  |
3 | emit!(one, two, three, four, five);
  |       ^^^

error: emit!(span, expr1, expr2) test
 --> tests/ui/emit.rs:3:12
  |
3 | emit!(one, two, three, four, five);
  |            ^^^

error: emit!(span, single_expr) test
 --> tests/ui/emit.rs:3:17
  |
3 | emit!(one, two, three, four, five);
  |                 ^^^^^

error: Diagnostic::emit() test
 --> tests/ui/emit.rs:3:24
  |
3 | emit!(one, two, three, four, five);
  |                        ^^^^

error: emit_call_site_error!(expr) test
 --> tests/ui/emit.rs:3:1
  |
3 | emit!(one, two, three, four, five);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `emit` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This is an error

         = note: simple note
         = help: simple help
         = help: simple hint
         = note: simple yay
         = note: format note
         = note: Some note
         = note: spanned simple note
         = note: spanned format note
         = note: Some note

 --> tests/ui/emit.rs:4:13
  |
4 | emit_notes!(one, two);
  |             ^^^
