third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/emit.rs
use test_crate::*;

emit!(one, two, three, four, five);
emit_notes!(one, two);

fn main() {}
